# boolean_parser

./: .bumpversion.cfg  .gitignore  .travis.yml  CHANGELOG  LICENSE.md  README.md  readthedocs.yml  requirements.txt  setup.cfg  setup.py  tasks.py
.github/workflows/: pythonapp.yml  sphinxbuild.yml
boolean_parser/: __init__.py  clauses.py  conditions.py  parser.py
boolean_parser/actions/: boolean.py  clause.py
boolean_parser/mixins/: __init__.py  sqla.py
boolean_parser/parsers/: __init__.py  base.py  sqla.py
boolean_parser/tests/: conftest.py  models.py
docs/sphinx/: CHANGELOG.rst  api.rst  clauses.rst  conf.py  index.rst  intro.rst
docs/sphinx/_static/: copybutton.js  custom.css
docs/sphinx/_templates/: layout.html
tests/: conftest.py  database.py  models.py  test_clauses.py  test_parse.py
tests/parsers/: test_parser.py  test_sqla.py
