[metadata]
name = boolean-parser
version = 0.1.0-alpha
author = Brian Cherinka
author_email = havok2063@gmail.com
description = Package for parsing strings containing conditional boolean logic
url = https://github.com/havok2063/boolean_parser
project_urls =
	Repository = https://github.com/havok2063/boolean_parser
	Documentation = https://boolean-parser.readthedocs.org
long_description = file: README.md
long_description_content_type = text/markdown
keywords = software, parsing, sqlalchemy
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Science/Research
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Documentation :: Sphinx
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
python_requires = >=3.6
packages = find:
install_requires =
	pyparsing>=2.4
	sqlalchemy>=1.3.6

[options.package_data]
boolean_parser =
	etc/*

[options.extras_require]
dev =
	pytest>=5.2
	pytest-cov>=2.4.0
	pytest-sugar>=0.8.0
	ipython>=7.13.0
	factory_boy>=2.12.0
	pytest-factoryboy>=2.0.3
docs =
	Sphinx>=1.8.0
	sphinx_bootstrap_theme>=0.4.12

[isort]
line_length = 100
sections =
	FUTURE
	STDLIB
	THIRDPARTY
	FIRSTPARTY
	LOCALFOLDER
default_section = THIRDPARTY
known_first_party = boolean_parser
balanced_wrapping = true
include_trailing_comma = false
lines_after_imports = 2
use_parentheses = true

[flake8]
ignore =
	H101
	E722
	W504
	W505
per-file-ignores =
	*/__init__.py:E,W
max-line-length = 99

[tool:pytest]
addopts = --cov boolean_parser --cov-report html -W ignore

[coverage:run]
branch = true
include =
	boolean_parser/*
omit =
	*/__init__.py

[coverage:report]
exclude_lines =
